--- a/webapp.yaml
+++ b/webapp.yaml
@@ -19,6 +19,23 @@ spec:
         image: nanajanashia/k8s-demo-app:v1.0
         ports:
         - containerPort: 3000
+        env:
+        - name: USER_NAME
+          valueFrom:
+            secretKeyRef:
+              name: mongo-secret # --from file 
+              key: mongo-user # ! variable with this key
+        - name: USER_PWD
+          valueFrom:
+            secretKeyRef:
+              name: mongo-secret # --from file
+              key: mongo-password  # ! variable with this key
+        - name: DB_URL
+          valueFrom:
+            configMapKeyRef:
+              name: mongo-config # --from file
+              key: mongo-url
+
 ---
 apiVersion: v1
 kind: Service
