fix base64 encoding, minkube image pull, debug port forwarding

--- a/mongo-secret.yaml
+++ b/mongo-secret.yaml
@@ -4,5 +4,5 @@ metadata:
   name: mongo-secret
 type: Opaque
 data: 
-  mongo-user: LW4gbW9uZ291c2VyIA0K
-  mongo-password: LW4gbW9uZ29wYXNzd29yZCANCg==
+  mongo-user: bW9uZ291c2Vy #! encoded with windows LW4gbW9uZ291c2VyIA0K   
+  mongo-password: bW9uZ29wYXNzd29yZA== #! LW4gbW9uZ29wYXNzd29yZCANCg==
