--- a/mongo.yaml
+++ b/mongo.yaml
@@ -17,6 +17,7 @@ spec:
       containers:
       - name: mongodb
         image: mongo:5.0
+        imagePullPolicy: Always
         ports:
         - containerPort: 27017
         env:
